--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "nextjs-tailwind-app-presentation-page",
   "version": "1.0.0",
   "private": true,
-  "author": "Creative Tim",
-  "license": "See license in https://www.creative-tim.com/license",
-  "homepage": "https://demos.creative-tim.com/nextjs-tailwind-app-presentation-page",
+  "author": "Nikhil Inuganti",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
